Added LibraryThing document URL generator