@@ -6,7 +6,7 @@ import org.tomfoolery.core.domain.documents.Document;
 import org.tomfoolery.infrastructures.dataproviders.generators.apache.httpclient.documents.references.abc.ApacheHttpClientDocumentUrlGenerator;
 
 @NoArgsConstructor(staticName = "of")
-public class IsbnDbDocumentUrlGenerator extends ApacheHttpClientDocumentUrlGenerator {
+public class LibraryThingEasyLinkingDocumentUrlGenerator extends ApacheHttpClientDocumentUrlGenerator {
     @Override
     protected @NonNull String getUrlScheme() {
         return "https";
@@ -14,11 +14,11 @@ public class IsbnDbDocumentUrlGenerator extends ApacheHttpClientDocumentUrlGener
 
     @Override
     protected @NonNull String getUrlHost() {
-        return "isbndb.com";
+        return "www.librarything.com";
     }
 
     @Override
     protected @NonNull String getUrlPath(@NonNull Document document) {
-        return String.format("book/%s", document.getId().getISBN_13());
+        return "isbn/%s".formatted(document.getId().getISBN_10());
     }
 }
